--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -8,15 +8,17 @@ on:
 
 jobs:
   laravel-tests:
-
     runs-on: ubuntu-latest
-    
+    container:
+      image: kirschbaumdevelopment/laravel-test-runner:7.3
+
+
     services:
       mysql:
         image: mysql:5.7
         env:
           MYSQL_ROOT_PASSWORD: password
-          MYSQL_DATABASE: laravel
+          MYSQL_DATABASE: test
         ports:
           - 33306:3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
@@ -25,19 +27,16 @@ jobs:
     - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
       with:
         php-version: '8.0'
-    - uses: actions/checkout@v3
-    - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-    - name: Updating lock file
-      run: composer update
+    - uses: actions/checkout@v1
+      with:
+        fetch-depth: 1
     - name: Install Dependencies
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-    - name: Generate key
-      run: php artisan key:generate
+    - name: Prepare Laravel Application
+      run: |
+        php -r "file_exists('.env') || copy('.env.example', '.env');"
+        php artisan key:generate
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
     - name: Execute tests (Unit and Feature tests) via PHPUnit
-      env:
-        DB_CONNECTION: mysql
-        DB_DATABASE: laravel
-      run: vendor/bin/phpunit
+      run: vendor/bin/phpunit tests/
