--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=ci
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
@@ -15,11 +15,14 @@ DB_DATABASE=test
 DB_USERNAME=root
 DB_PASSWORD=password
 
+QUEUE_DRIVER=sync
+MAIL_DRIVER=log
+
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=array
 FILESYSTEM_DRIVER=local
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+SESSION_DRIVER=array
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
