Modifiche relative ai file di configurazione delle github actions

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 APP_NAME=Laravel
-APP_ENV=ci
+APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
@@ -9,20 +9,17 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mysql
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=test
-DB_USERNAME=root
-DB_PASSWORD=password
-
-QUEUE_DRIVER=sync
-MAIL_DRIVER=log
+DB_DATABASE=test_db
+DB_USERNAME=user
+DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=array
+CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=array
+SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
