--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -33,6 +33,7 @@ jobs:
         mysql --version
         sudo apt-get install -y mysql-client
         mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports['3306'] }} -uuser -psecret -e "SHOW DATABASES"
+        mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports['3306'] }} -uuser -psecret -e "use test_db;show tables;"
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Updating lock file
