Modifiche relative ai file di configurazione delle github actions

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -33,7 +33,6 @@ jobs:
         mysql --version
         sudo apt-get install -y mysql-client
         mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports['3306'] }} -uuser -psecret -e "SHOW DATABASES"
-        mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports['3306'] }} -uuser -psecret -e "use test_db;show tables;"
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Updating lock file
@@ -48,8 +47,11 @@ jobs:
       run: php artisan migrate
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       env:
+        DB_CONNECTION: mysql
+        DB_HOST: 127.0.0.1
         MYSQL_DATABASE: test_db
-        DB_USERNAME: root
-        DB_PASSWORD: secretroot
+        DB_DATABASE: test_db
+        DB_USERNAME: user
+        DB_PASSWORD: secret
         DB_PORT: ${{ job.services.mysql.ports[3306] }}
       run: vendor/bin/phpunit
