Modifiche relative ai file di configurazione delle github actions

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -50,6 +50,8 @@ jobs:
         DB_CONNECTION: mysql
         DB_HOST: 127.0.0.1
         MYSQL_DATABASE: test_db
+        MYSQL_USER: user
+        MYSQL_PASSWORD: secret
         DB_DATABASE: test_db
         DB_USERNAME: user
         DB_PASSWORD: secret
