--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -44,7 +44,9 @@ jobs:
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
     - name: Create Database
-      run: php artisan migrate
+      run: |
+        php artisan env
+        php artisan migrate
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       env:
         DB_CONNECTION: mysql
