--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -2,7 +2,7 @@ name: Laravel
 
 on:
   push:
-    branches: [ "main" , "testingCreazioneProgetto"]
+    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
@@ -21,7 +21,6 @@ jobs:
 
     # SERVICES
 
-    # Docs: https://docs.github.com/en/actions/using-containerized-services
     services:
       mysql:
         image: mysql:latest
@@ -42,13 +41,12 @@ jobs:
     strategy:
       fail-fast: false
 
-    
+    # STEPS
 
     steps:
-      - name: Checkout
+      - name: Setup Checkout
         uses: actions/checkout@v3
-
-        # Docs: https://github.com/shivammathur/setup-php
+      
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
@@ -63,18 +61,16 @@ jobs:
 
       - name: Setup enviroment
         run: |
+          chmod -R 777 storage bootstrap/cache
           php -r "file_exists('.env') || copy('.env.example', '.env');"
           php artisan key:generate
           php artisan config:clear
 
-      - name: Verify MySQL connection
-        run: |
-          mysql --version
-          sudo apt-get install -y mysql-client
-          mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports['3306'] }} -uroot -ppassword -e "SHOW DATABASES"
-
-      - name: Directory Permissions
-        run: chmod -R 777 storage bootstrap/cache
+#      - name: Verify MySQL connection
+#        run: |
+#          mysql --version
+#          sudo apt-get install -y mysql-client
+#          mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports['3306'] }} -uroot -ppassword -e "SHOW DATABASES"
 
       - name: Run Migration
         run: php artisan migrate -v
@@ -82,9 +78,8 @@ jobs:
           DB_PORT: ${{ job.services.mysql.ports['3306'] }}
           REDIS_PORT: ${{ job.services.redis.ports['6379'] }}
 
-
       - name: Execute tests (Unit and Feature tests) via PHPUnit
-        run: vendor/bin/phpunit
+        run: php artisan test
         env:
           DB_PORT: ${{ job.services.mysql.ports['3306'] }}
           REDIS_PORT: ${{ job.services.redis.ports['6379'] }}
