--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -2,7 +2,7 @@ name: Laravel
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main" , "fix_main" ]
   pull_request:
     branches: [ "main" ]
 
